# factorio-headless-client

./: .gitignore  .kissconfig  CLAUDE.md  Cargo.toml
factorio-mapgen/: Cargo.toml
factorio-mapgen/src/: cache.rs  compiler.rs  executor.rs  expression.rs  fast.rs  lib.rs  loader.rs  operations.rs  program.rs  terrain.rs
src/: error.rs  lib.rs
src/bot/: controller.rs  crafting.rs  mod.rs  pathfinding.rs
src/client/: commands.rs  events.rs  mod.rs  session.rs
src/codec/: entity_parsers.rs  heartbeat.rs  input_action.rs  map_settings.rs  map_transfer.rs  map_types.rs  mod.rs  reader.rs  synchronizer_action.rs  tick_closure.rs  types.rs  writer.rs
src/daemon/: mod.rs  protocol.rs
src/lua/: mod.rs  noise.rs  prototype.rs  runtime.rs
src/protocol/: connection.rs  message.rs  mod.rs  packet.rs  transport.rs
src/protocol/connection/: actions.rs
src/renderer/: atlas.rs  camera.rs  gpu.rs  lua_icons.rs  mod.rs  sprites.rs  tilemap.rs
src/simulation/: action_executor.rs  checksum.rs  mod.rs  tick.rs
src/state/: entity.rs  inventory.rs  mod.rs  player.rs  recipe.rs  surface.rs  world.rs
