[workspace]
members = ["factorio-mapgen"]

[package]
name = "factorio-client"
version = "0.1.0"
edition = "2021"
description = "Factorio multiplayer client API for bot/automation"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "time", "sync", "macros"] }

# Binary parsing
bytes = "1"
byteorder = "1"

# Compression
flate2 = "1"
zstd = "0.13"
zip = "2"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"

# Collections
indexmap = "2"
ahash = "0.8"

# CRC
crc32fast = "1"

# Lua runtime
mlua = { version = "0.10", features = ["lua54", "vendored"] }

# Bitflags for protocol flags
bitflags = "2"

# Map generation
factorio-mapgen = { path = "factorio-mapgen" }

# CLI
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
libc = "0.2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "factorio-tui"
path = "src/bin/tui.rs"

[[bin]]
name = "play-game"
path = "src/bin/play_game.rs"

[[bin]]
name = "factorio-bot"
path = "src/bin/factorio_bot.rs"

[[bin]]
name = "factorio-daemon"
path = "src/bin/factorio_daemon.rs"

[[bin]]
name = "tile-decode-test"
path = "src/bin/tile_decode_test.rs"

[[bin]]
name = "entity-debug"
path = "src/bin/entity_debug.rs"

[[bin]]
name = "download-map"
path = "src/bin/download_map.rs"

[features]
default = []
tui = ["dep:ratatui", "dep:crossterm", "dep:unicode-width", "dep:ratatui-image", "dep:image"]
gpu = ["dep:wgpu", "dep:pollster", "dep:bytemuck", "dep:image", "dep:crossterm"]

[dependencies.wgpu]
version = "24"
optional = true

[dependencies.pollster]
version = "0.4"
optional = true

[dependencies.bytemuck]
version = "1"
optional = true
features = ["derive"]

[dependencies.ratatui-image]
version = "4.2"
optional = true

[dependencies.image]
version = "0.25"
optional = true
default-features = false
features = ["png"]

[dependencies.ratatui]
version = "0.29"
optional = true

[dependencies.crossterm]
version = "0.28"
optional = true

[dependencies.unicode-width]
version = "0.2"
optional = true


[[bin]]
name = "dump-chunk2"
path = "src/bin/dump_chunk2.rs"

[[bin]]
name = "trace-entity"
path = "src/bin/trace_entity.rs"

[[bin]]
name = "factorio-gpu"
path = "src/bin/gpu_viewer.rs"
required-features = ["gpu"]
